fixed company list nav bar stretching out

--- a/src/client/assets/QuadsContainer.css
+++ b/src/client/assets/QuadsContainer.css
@@ -25,6 +25,7 @@
 
 .overview-container {
   display: flex;
+  /* display: none; */
   height: 99%;
   margin: auto;
   overflow: hidden;
@@ -73,7 +74,7 @@
 }
 
 #overview-right p {
-  font-family: 'Lato', serif;
+  font-family: "Lato", serif;
   color: #a5a8a6;
 }
 
@@ -149,6 +150,7 @@
 
 .stock-container {
   display: flex;
+  /* display: none; */
   margin: auto;
   width: 100%;
   height: 99%;
@@ -205,6 +207,7 @@
 
 #quad-issues {
   display: flex;
+  /* display: none; */
   padding-bottom: 0.5%;
 }
 
@@ -328,7 +331,7 @@
   margin-left: 3%;
   margin-top: -2.5%;
   text-align: left;
-  font-family: 'Lato';
+  font-family: "Lato";
   color: #a5a8a6;
   width: 100%;
   line-height: 155%;
@@ -350,6 +353,7 @@
 
 .issues-politicians {
   display: inline-block;
+  /* display: none; */
   vertical-align: top;
   padding-bottom: 5%;
   width: 25%;
@@ -424,6 +428,7 @@
 /* loading video */
 #quad-company-list img {
   display: block;
+  /* display: none; */
   position: relative;
   margin: auto;
   max-height: 100%;
@@ -431,6 +436,7 @@
 }
 
 .cl-quad {
+  /* display: none; */
   background-color: #000000;
   width: 100%;
   overflow: hidden;
@@ -438,13 +444,16 @@
 
 #cl-nav {
   background: #000000;
-  position: fixed;
-  min-width: 43.5vw;
+  width: 97.5%;
+  /* position: absolute; */
+  /* position: fixed; */
+  /* min-width: 43.5vw; */
+  /* width: 100%; */
 }
 
 #cl-table {
   height: 90%;
-  margin-top: 3.75%;
+  /* margin-top: 3.75%; */
   width: 99.5%;
   padding-bottom: 1%;
   overflow: auto;
@@ -472,7 +481,7 @@
 }
 
 #cl-ignore {
-  display: none;
+  /* display: none; */
 }
 
 .divTableHead {
